--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,9 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "@typescript-eslint/no-explicit-any": 0,
+        "@typescript-eslint/no-unused-vars": 0,
+        "@typescript-eslint/no-var-requires": 0
     }
 }
