--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-server-generator",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "start:dev": "nodemon",
     "start": "node -r module-alias/register ./dist --env=developement",
@@ -32,7 +32,8 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^4.1.0",
     "mongoose": "^5.9.25",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
@@ -43,6 +44,7 @@
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.4",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "eslint": "^7.9.0",
