--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node -r module-alias/register ./dist --env=developement",
     "build": "node build.js",
     "lint": "tslint --project \"tsconfig.json\"",
-    "test": "jest --testTimeout=10000"
+    "test": "jest --testTimeout=10000",
+    "generate-documentation": "typedoc --tsconfig ./tsconfig.json"
   },
   "nodemonConfig": {
     "watch": [
@@ -54,6 +55,7 @@
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
+    "typedoc": "^0.19.2",
     "typescript": "^4.0.2"
   }
 }
