--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "start:dev": "nodemon",
     "start": "node -r module-alias/register ./dist --env=developement",
     "build": "node build.js",
+    "commit-a": "git add . && git cz",
+    "commit": "git cz",
     "lint": "tslint --project \"tsconfig.json\"",
     "test": "jest --testTimeout=10000",
-    "generate-docs": "typedoc --tsconfig ./tsconfig.json"
+    "generate-docs": "typedoc --tsconfig ./tsconfig.json",
+    "snyk-protect": "snyk protect",
+    "prepare": "npm run snyk-protect"
   },
   "nodemonConfig": {
     "watch": [
@@ -31,31 +35,39 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "helmet": "^4.1.0",
-    "mongoose": "^5.9.25",
+    "helmet": "^4.2.0",
+    "mongoose": "^5.10.13",
     "morgan": "^1.10.0",
+    "snyk": "^1.425.2",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/find": "^0.2.1",
-    "@types/helmet": "0.0.48",
-    "@types/jest": "^26.0.13",
+    "@types/helmet": "4.0.0",
+    "@types/jest": "^26.0.15",
     "@types/jsonfile": "^6.0.0",
-    "@types/mongoose": "^5.7.36",
-    "@types/morgan": "^1.9.1",
-    "@types/node": "^14.6.4",
+    "@types/mongoose": "^5.7.37",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.7",
     "@types/swagger-ui-express": "^4.1.2",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
-    "eslint": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "^7.13.0",
     "find": "^0.3.0",
     "fs-extra": "^9.0.1",
-    "jsonfile": "^6.0.1",
-    "nodemon": "^2.0.4",
+    "git-cz": "^4.7.1",
+    "jsonfile": "^6.1.0",
+    "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typedoc": "^0.19.2",
-    "typescript": "^4.0.2"
-  }
+    "typescript": "^4.0.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "snyk": true
 }
